Configuções iniciais e criando html, css e javascript da pagina de login.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
+
+    <!-- ICON -->
+    <script src="https://kit.fontawesome.com/2ea8344aaa.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
-    
+    <header>
+        <h1> Projeto Login </h1>
+        <a href="./html/profile.html">
+            <nav>
+                <i class="fa-solid fa-user"></i>
+            </nav>
+        </a>
+    </header>
+
+    <main>
+        <section class="main-content">
+
+        </section>
+    </main>
+
+    <footer>
+        <span>
+            &copy; Todos os direitos reservados.
+        </span>
+    </footer>
 </body>
 </html>
