--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <h1> Projeto Login </h1>
-        <a href="./html/profile.html">
+        <a href="./pages/profile.html">
             <nav>
                 <i class="fa-solid fa-user"></i>
             </nav>
@@ -32,7 +32,7 @@
 
     <footer>
         <span>
-            &copy; Todos os direitos reservados.
+            &copy; Meu Mundo, 2024 - Todos os direitos reservados.
         </span>
     </footer>
 </body>
