--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
 </head>
 <body>
     <header>
-        <h1> Projeto Login </h1>
-        <a href="./pages/profile.html">
+        <div-img>
+            <a href="./index.html">
+                <img src="./img/logo.png" />
+            </a>
+        </div-img>
+        <div class="div-profile">
+            <a href="./pages/profile.html">
             <nav>
                 <i class="fa-solid fa-user"></i>
             </nav>
-        </a>
+            </a>
+        </div>
     </header>
 
     <main>
